change repo to monorepo

--- a/packages/snap/index.html
+++ b/packages/snap/index.html
@@ -53,7 +53,7 @@
                 <button id="rlpEncodedButton">Create</button>
               </div>
             </div>
-            <pre id="rlpEncodedPre"> </pre>
+            <code id="rlpEncodedCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -62,7 +62,7 @@
                 <button id="accountKeyLegacyButton">Create</button>
               </div>
             </div>
-            <pre id="accountKeyLegacyPre"> </pre>
+            <code id="accountKeyLegacyCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -72,7 +72,7 @@
                 <button id="accountKeyPublicButton">Create</button>
               </div>
             </div>
-            <pre id="accountKeyPublicPre"> </pre>
+            <code id="accountKeyPublicCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -81,7 +81,7 @@
                 <button id="accountKeyFailButton">Create</button>
               </div>
             </div>
-            <pre id="accountKeyFailPre"> </pre>
+            <code id="accountKeyFailCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -91,7 +91,7 @@
                 <button id="accountKeyWeightedMultiSigButton">Create</button>
               </div>
             </div>
-            <pre id="accountKeyWeightedMultiSigPre"> </pre>
+            <code id="accountKeyWeightedMultiSigCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -101,58 +101,7 @@
                 <button id="accountKeyRoleBasedButton">Create</button>
               </div>
             </div>
-            <pre id="accountKeyRoleBasedPre"></pre>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- wallet -->
-    <hr/>
-    <div>
-      <div>
-        caver.wallet<br/>
-        <ul>
-          <li>
-            <div style="display: grid; grid-template-columns: 13rem auto;">
-              generate:
-              <div>
-                <input type="text" placeholder="Number of Keyring" id="numberOfKeyringsInput"/>
-                <input type="text" placeholder="A random string (optional)" id="entropyInput"/>
-                <button id="generateButton">Generate</button>
-              </div>
-            </div>
-            <pre id="generatePre"> </pre>
-          </li>
-          <li>
-            <div style="display: grid; grid-template-columns: 13rem auto;">
-              newKeyring:
-              <div>
-                <input type="text" placeholder="Key" id="keyInput"/>
-                <button id="newKeyringButton">Generate</button>
-              </div>
-            </div>
-            <pre id="newKeyringPre"> </pre>
-          </li>
-          <li>
-            <div style="display: grid; grid-template-columns: 13rem auto;">
-              getKeyring:
-              <div>
-                <input type="text" placeholder="Address" id="getKeyringAddressInput"/>
-                <button id="getKeyringButton">Get Keyring</button>
-              </div>
-            </div>
-            <pre id="getKeyringPre"> </pre>
-          </li>
-          <li>
-            <div style="display: grid; grid-template-columns: 13rem auto;">
-              isExisted:
-              <div>
-                <input type="text" placeholder="Address" id="isExistedAddressInput"/>
-                <button id="isExistedButton">Get Keyring</button>
-              </div>
-            </div>
-            <pre id="isExistedPre"> </pre>
+            <code id="accountKeyRoleBasedCode"></code>
           </li>
         </ul>
       </div>
@@ -193,7 +142,7 @@
                 <button id="sendButton">Send</button>
               </div>
             </div>
-            <pre id="transactionReceiptPre"> </pre>
+            <code id="transactionReceiptCode"> </code>
           </li>
           <li>
             <div style="display: grid; grid-template-columns: 13rem auto;">
@@ -203,7 +152,7 @@
                 <button id="signButton">Sign</button>
               </div>
             </div>
-            <pre id="signedMessagePre"></pre>
+            <code id="signedMessageCode"></code>
           </li>
         </ul>
       </div>
